examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/different_branches.st
language core;

fn main(n : Nat) -> Bool {
    return if true then false else 0
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
